Mon May 16 14:08:35 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.ll (idl_store_pragma):
        * TAO_IDL/fe/lex.yy.cpp (idl_store_pragma):
        
          Added code to eat extra whitespace in a #pragma directive,
          need when using preprocessors that don't do it automatically.
          Thanks to Johnny Willemsen <jwillwmsen@remedy.nl> for
          discovering this quirk about the preprocessor used with the
          Intel C++ compiler.

Mon May 16 18:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CDR.h:
        * tao/Codeset_Manager.h:
        * tao/Codeset_Translator_Factory_T.h:
        * tao/Reply_Dispatcher.h:
        * tao/Sequence.h:
        * tao/Transport_Acceptor.h:
        * tao/SmartProxies/Smart_Proxies.h:
          Doxygen improvements

Mon May 16 10:09:45 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp (visit_operation):

          Added check for imported node, skipping code generation if the
          node is imported. For all other node types in this visitor, arg
          traits specializations must be generated, since an IDL type
          declared in an included file could be used as a parameter in
          an operation in the main file. But when visiting an operation
          itself, the only thing that triggers an arg traits specialization
          is an anonymous bounded string parameter (deprecated but still
          legal). Since this type of declaration is not visible outside
          the operation's scope, it should not trigger code generation
          if the node is imported. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointing out that this code generation
          for an imported operation causes a C++ compilation failure, due
          to the lack of a proper #include of tao/BD_String_Arg_Traits.h.

Mon May 16 15:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
