@@ -1,10 +1,19 @@
+Mon May 16 12:15:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* TAO_IDL/include/ast_component.h
+	  (AST_Component::port_descriptor):
+
+	  Added an inlined constructor to this structure to make sure all
+	  fields are initialized prior to use.  Fixes a g++ 4.0 "variable
+	  is used initialized" warning.
+
 Mon May 16 14:08:35 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/fe/idl.ll (idl_store_pragma):
         * TAO_IDL/fe/lex.yy.cpp (idl_store_pragma):
         
           Added code to eat extra whitespace in a #pragma directive,
-          need when using preprocessors that don't do it automatically.
+          needed when using preprocessors that don't do it automatically.
           Thanks to Johnny Willemsen <jwillwmsen@remedy.nl> for
           discovering this quirk about the preprocessor used with the
           Intel C++ compiler.
